--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Database connection
-DATABASE_URL=postgres://postgres:password@localhost:5432/hulunote
+DATABASE_URL=postgres://postgres:123456@localhost:5432/hulunote_open
 
 # JWT configuration
 JWT_SECRET=your-secret-key-change-in-production
