--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 dotenvy = "0.15"
 rand = "0.8"
+zip = "2"
 
 # Email (optional, for verification)
 lettre = { version = "0.11", features = ["tokio1-native-tls"], optional = true }
